Implement StabilityTask using MetaTask and SmoothTask

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,8 @@ target_link_libraries(mc_control_solver RBDyn Tasks)
 set(mc_tasks_SRC
 ./src/mc_tasks/EndEffectorTask.cpp
 ./src/mc_tasks/CoMTask.cpp
+./src/mc_tasks/MetaTask.cpp
+./src/mc_tasks/StabilityTask.cpp
 )
 add_library(mc_tasks SHARED ${mc_tasks_SRC})
 target_link_libraries(mc_tasks mc_control_solver mc_rbdyn)
