Properly initialize the seq controller
ToDo: (to allow to play a seq on the robot in the air)
- Implement all SeqStep needed to play a plan
- Implement seqActionFromStanceAction
- Mimic ask_step behaviour
ToDo: (to allow to play in the same way as classic_control in the air)
- Implement readable stance configuration from file (with per stance configuration)
ToDo: (to allow to play for real)
- Get force sensor information
ToDo: (to improve upon classic_control)
- Feed real encoders data after each stance
- Manual contact guidance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(mc_rbdyn_SRC
 ./src/mc_rbdyn/contact.cpp
 ./src/mc_rbdyn/robot.cpp
 ./src/mc_rbdyn/stance.cpp
+./src/mc_rbdyn/StanceConfig.cpp
 )
 
 add_library(mc_rbdyn SHARED ${mc_rbdyn_SRC})
