--- a/idl/CMakeLists.txt
+++ b/idl/CMakeLists.txt
@@ -7,11 +7,9 @@ ENDFOREACH()
 
 MESSAGE("${ALL_IDL_CPP_STUBS}")
 ADD_CUSTOM_TARGET(generate_mc_idl_cpp DEPENDS ${ALL_IDL_CPP_STUBS})
-ADD_CUSTOM_TARGET(generate_mc_idl_python DEPENDS ${ALL_IDL_CPP_STUBS})
+ADD_CUSTOM_TARGET(generate_mc_idl_python ALL DEPENDS ${ALL_IDL_PYTHON_STUBS})
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/idl)
-
-#TODO : INSTALL PYTHON IDL
 
 FOREACH(IDL ${IDLS})
 	INSTALL(FILES ${IDL}.idl DESTINATION share/hrpsys/idl)
