Improve the controller configurability

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,5 +181,12 @@ install(
   FILES
     data/drc_stairs_climbing.json
     data/drc_stairs_climbing_config.json
+    data/jvrc_ladder_climbing.json
+    data/jvrc_ladder_climbing_config.json
   DESTINATION share/mc_rtc
+)
+install(
+  FILES
+    etc/mc_rtc.conf
+  DESTINATION etc
 )
