Implement optionnal publication of joint states in ROS

--- a/etc/mc_rtc.conf
+++ b/etc/mc_rtc.conf
@@ -1,7 +1,7 @@
 {
   //"Enabled" : ["Posture", "Body6d", "CoM", "Seq", "Driving", "Egress", "EgressMRQP"],
-  "Enabled" : ["Seq"],
-  "Default" : "Seq",
+  "Enabled" : ["Posture"],
+  "Default" : "Posture",
   "Seq" : {
     //"Env" : {
     //  "Path" : "/home/gergondet/devel-src/catkin_ws/mc_ws/src/hrp2_drc/hrp2_drc_description",
